app/gateway-oss/1.1.x/index.md
---
title: Documentation for Kong
is_homepage: true
---

<div class="docs-grid">
  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-window.svg" /><a href="https://konghq.com/install">Installation</a></h3>
    <p>You can install Kong on most Linux distributions and macOS. We even provide the source so you can compile yourself.</p>
    <a href="https://konghq.com/install">Install Kong &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-quickstart.svg" /><a href="/{{page.kong_version}}/getting-started/quickstart">5-minute Quickstart</a></h3>
    <p>Learn how to start Kong, add a Service, enable plugins, and add consumers in under thirty seconds.</p>
    <a href="/{{page.kong_version}}/getting-started/quickstart">Start using Kong &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/db-less-and-declarative-config">DB-less &amp; Declarative Configuration</a></h3>
    <p>Learn how to leverage the declarative configuration format for using Kong without a database, using in-memory storage only.</p>
    <a href="/{{page.kong_version}}/db-less-and-declarative-config">Read the tutorial &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/streams-and-service-mesh">Streams &amp; Service Mesh</a></h3>
    <p>Want to use Kong over TCP traffic? Want to start using Service Mesh? Check our tutorial to learn how to do it.</p>
    <a href="/{{page.kong_version}}/streams-and-service-mesh">Read the tutorial &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="https://github.com/Kong/kong-mesh-dist-kubernetes">Kubernetes &amp; Service Mesh</a></h3>
    <p>We have a quick demo repository showing how to run Kong Service Mesh on Kubernetes.</p>
    <a href="https://github.com/Kong/kong-mesh-dist-kubernetes">Visit the repo &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/upgrading">Upgrade guide</a></h3>
    <p>Already using Kong, and wanting to upgrade? Here's the step-by-step guide.</p>
    <a href="/{{page.kong_version}}/upgrading">Read the upgrade guide &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/configuration">Configuration file</a></h3>
    <p>Want to further optimize your Kong cluster, database, or configure NGINX? Dive into the configuration.</p>
    <a href="/{{page.kong_version}}/configuration">Start configuring Kong &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/cli">CLI reference</a></h3>
    <p>Want a better understanding of the CLI tool and its options? Browse the detailed command reference.</p>
    <a href="/{{page.kong_version}}/cli">Use the CLI &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/admin-api">Admin API reference</a></h3>
    <p>Ready to learn the underlying interface? Browse the Admin API reference to learn how to start making requests.</p>
    <a href="/{{page.kong_version}}/admin-api">Explore the interface &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/proxy">Proxy reference</a></h3>
    <p>Learn every way to configure Kong to proxy your Services, serve them over SSL or use WebSockets.</p>
    <a href="/{{page.kong_version}}/proxy">Read the Proxy Reference &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/loadbalancing">Load balancing reference</a></h3>
    <p>Learn how to setup Kong to load balance traffic through replicas of your upstream services.</p>
    <a href="/{{page.kong_version}}/loadbalancing">Read the Load balancing Reference &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-doc-reference.svg" /><a href="/{{page.kong_version}}/health-checks-circuit-breakers">Health checks &amp; circuit breakers</a></h3>
    <p>Let Kong monitor the availability of your services and adjust its load balancing accordingly.</p>
    <a href="/{{page.kong_version}}/health-checks-circuit-breakers">Learn about health checks and circuit breakers &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-clustering.svg" /><a href="/{{page.kong_version}}/clustering">Clustering</a></h3>
    <p>If you are starting more than one node, you must use clustering to make sure all the nodes belong to the same Kong cluster.</p>
    <a href="/{{page.kong_version}}/clustering">Read the clustering reference &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><img src="/assets/images/icons/documentation/icn-window.svg" /><a href="/{{page.kong_version}}/plugin-development">Write your own plugins</a></h3>
    <p>Looking for something Kong does not do for you? Easy: write it as a plugin. Learn how to write your own plugins for Kong.</p>
    <a href="/{{page.kong_version}}/plugin-development">Read the plugin development guide &rarr;</a>
  </div>


</div>
